# autoXdame

./: HUONG_DAN_SU_DUNG.md  duk.rar
pico_macro/: CMakeLists.txt  build.bat
pico_macro/scripts/: README_RAWINPUT.md  build_windows_app.bat  send_q_cpp.cpp  send_q_csharp.cs  send_q_keyboard.py  send_q_rawinput.cpp
pico_macro/src/: main.c  tusb_config.h
